...
//

// MARK: - PublicCredentialVerificationView
"PublicCredentialVerificationView.HeaderLabel" = "Log in";
"PublicCredentialVerificationView.PublicCredentialTextInput" = "Enter email, mobile, or username";
"PublicCredentialVerificationView.ForgotPublicCredentialButton" = "Forgotten your email?";
"PublicCredentialVerificationView.NextButton" = "Continue";

// MARK: - RememberedPasswordLoginView
"RememberedPasswordLoginView.HeaderLabel" = "Log in";
"RememberedPasswordLoginView.ChangeButton" = "Edit";
"RememberedPasswordLoginView.PasswordTextInput" = "Password";
"RememberedPasswordLoginView.ForgotPasswordButton" = "Forgot password?";
...
"OTPAnimatedTextField.EmailTextField" = "email";

// MARK: - OTPPhoneTextField
"OTPPhoneTextField.PhoneTitleLabel" = "Mobile number";

// MARK: - OTPPhoneSelectionView
"OTPPhoneSelectionView.DoneButton" = "Done";
"OTPPhoneSelectionView.SubtitleLabel" = "We'll send a code to:";

// MARK: - OTPLoginView
"OTPLoginView.HeaderTitleLabel" = "Log in quickly with a one-off code";
"OTPLoginView.InformationLabel" = "By continuing, you allow us to contact you and agree to receive text messages. Network fees may apply.";
"OTPLoginView.LoginButton" = "Log In";
...
