...

- (void)payPalButton:(BTPayPalButton *)button didFailWithError:(NSError *)error {
    NSLog(@"payPalButton:%@ didFailWithError:%@", button, error);
    [[[UIAlertView alloc] initWithTitle:@"Fail"
                                message:[error description]
                               delegate:nil
                      cancelButtonTitle:@"OK"
                      otherButtonTitles:nil] show];
}

@end

