...
"RememberedPasswordLoginView.ChangeButton" = "Change";
"RememberedPasswordLoginView.PasswordTextInput" = "Password";
"RememberedPasswordLoginView.ForgotPasswordButton" = "Forgot password?";
"RememberedPasswordLoginView.LoginButton" = "Log In";

// MARK: - OTPVerifyCredentialView
"OTPVerifyCredentialView.HeaderTitleLabel" = "Pay with PayPal";
"OTPVerifyCredentialView.NextButton" = "Next";
"OTPVerifyCredentialView.TryAgainLabel" = "Check your email address and try again.";
"OTPVerifyCredentialView.TryAgainEmptyLabel" = "Enter an email address and try again.";
"OTPVerifyCredentialView.EnterEmailLabel" = "Enter your email to get started.";
"OTPVerifyCredentialView.ForgotLoginButton" = "Forgot your login info?";

...
